# ciq

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  build.rs  clippy.toml  dist-workspace.toml
.claude/skills/ciq-release/: SKILL.md
.github/workflows/: ci.yml
dev/: ASSUMPTIONS.md  DECISIONS.md  PLAN.md  TASKS.md  core-modules.txt  gen_showcase.py  human-smoke.md  shell-exempt.txt
dev/ci/: check-shell-exempt.sh  core-floor.sh  coverage-warn.sh
docs/: _config.yml  configuration.md  features.md  index.md  quick-reference.md
docs/features/: ai-nl-to-sql.md  autocomplete.md  column-palette.md  csv-ingest.md  facets.md  live-sql-grid.md  output-modes.md  query-history.md  search.md
proptest-regressions/: sql_lexer_tests.txt
proptest-regressions/autocomplete/: insertion_tests.txt
proptest-regressions/query/: preprocess_tests.txt
src/: ai.rs  app.rs  autocomplete.rs  clipboard.rs  config.rs  engine.rs  error.rs  facets.rs  grid.rs  harness.rs  history.rs  ingest.rs  lib.rs  logging.rs  logging_tests.rs  main.rs  output.rs  palette.rs  query.rs  save.rs  schema.rs  schema_bar.rs  schema_bar_tests.rs  scroll_window.rs  scroll_window_tests.rs  search.rs  sql_ident.rs  sql_ident_tests.rs  sql_lexer.rs  sql_lexer_tests.rs  text_match.rs  text_match_tests.rs  theme.rs
src/ai/: ai_app.rs  ai_render.rs  ai_render_tests.rs  ai_state.rs  ai_state_tests.rs  prompt.rs  prompt_tests.rs  provider.rs  provider_tests.rs
src/ai/snapshots/: ciq__ai__ai_render__ai_render_tests__snapshot_ai_pending_80x24.snap  ciq__ai__ai_render__ai_render_tests__snapshot_ai_success_80x24.snap
src/app/: app_render.rs  app_render_tests.rs  app_tests.rs  autocomplete_app.rs  double_click.rs  double_click_tests.rs  editor.rs  editor_tests.rs  event_loop.rs  help_line.rs  help_line_tests.rs  key.rs  key_tests.rs  layout_regions.rs  layout_regions_tests.rs  mouse.rs  mouse_app.rs  mouse_tests.rs  palette_app.rs  polish.rs  polish_tests.rs  query_form.rs  query_form_app.rs  query_form_tests.rs  save_app.rs  search_app.rs
src/app/app_tests/: ai_tests.rs  autocomplete_tests.rs  facet_tests.rs  history_tests.rs  mouse_tests.rs  palette_tests.rs  polish_tests.rs  save_tests.rs  search_tests.rs  simple_mode_tests.rs
src/app/editor/: char_search.rs  char_search_tests.rs  mode.rs  mode_tests.rs  text_objects.rs  text_objects_tests.rs  vim.rs  vim_tests.rs
src/app/query_form/: composer.rs  composer_tests.rs  simplifier.rs  simplifier_tests.rs
src/autocomplete/: autocomplete_render.rs  autocomplete_render_tests.rs  autocomplete_state.rs  autocomplete_state_tests.rs  candidates.rs  candidates_tests.rs  clause_context.rs  clause_context_tests.rs  insertion.rs  insertion_tests.rs  pane_context.rs  pane_context_tests.rs  sql_keywords.rs  sql_keywords_tests.rs  value_source.rs  value_source_tests.rs
src/autocomplete/snapshots/: ciq__autocomplete__autocomplete_render__autocomplete_render_tests__snapshot_populated_popup_with_typed_hints.snap  ciq__autocomplete__autocomplete_render__autocomplete_render_tests__snapshot_value_completion_popup.snap
src/clipboard/: osc52.rs  osc52_tests.rs
src/config/: ai_config.rs  config_tests.rs  general.rs  history_config.rs  theme_config.rs
src/engine/: duckdb_engine.rs  duckdb_engine_tests.rs  fake_engine.rs  fake_engine_tests.rs  types.rs  types_tests.rs  value_render.rs  value_render_tests.rs
src/facets/: facet_engine_tests.rs  facet_query.rs  facet_query_tests.rs  facet_render.rs  facet_render_tests.rs  facet_state.rs  facet_state_tests.rs
src/facets/snapshots/: ciq__facets__facet_render__facet_render_tests__snapshot_facet_histogram_80x24.snap
src/grid/: col_width.rs  col_width_tests.rs  grid_layout.rs  grid_layout_tests.rs  grid_render.rs  grid_render_tests.rs
src/grid/snapshots/: ciq__grid__grid_render__grid_render_tests__snapshot_basic_grid_80x24.snap  ciq__grid__grid_render__grid_render_tests__snapshot_null_glyph_distinct_from_empty.snap  (+1 more)
src/harness/: app_harness.rs  app_harness_tests.rs  engine_harness.rs  engine_harness_tests.rs
src/history/: history_app.rs  history_events.rs  history_events_tests.rs  history_render.rs  history_render_tests.rs  history_state.rs  history_state_tests.rs  storage.rs  storage_tests.rs
src/ingest/: csv_config.rs  csv_config_tests.rs  csv_opts.rs  csv_opts_tests.rs  ingest_semantics_tests.rs  sniff.rs  sniff_tests.rs
src/output/: console.rs  console_tests.rs  emit.rs  emit_tests.rs
src/palette/: palette_render.rs  palette_render_tests.rs  palette_state.rs  palette_state_tests.rs  query_emit.rs  query_emit_tests.rs
src/query/: debouncer.rs  debouncer_tests.rs  dispatcher.rs  dispatcher_tests.rs  error_enhance.rs  error_enhance_tests.rs  preprocess.rs  preprocess_tests.rs  query_state.rs  query_state_tests.rs  worker.rs
src/query/worker/: thread.rs  thread_tests.rs  types.rs  types_tests.rs
src/save/: save_io.rs  save_io_tests.rs  save_render.rs  save_render_tests.rs  save_state.rs  save_state_tests.rs
src/schema/: schema_tests.rs  types.rs  types_tests.rs
src/search/: matcher.rs  matcher_tests.rs  search_render.rs  search_render_tests.rs  search_state.rs  search_state_tests.rs
src/snapshots/: ciq__schema_bar__schema_bar_tests__layout_span_list_snapshot.snap  ciq__schema_bar__schema_bar_tests__render_schema_bar_snapshot_80x1.snap
tests/: output_cli.rs
tests/fixtures/: all_text_header.csv  dup_empty_header.csv  empty_vs_null.csv  messy_headers.csv  quoted_names.csv  sample.csv  showcase.csv
(+4 files in other folders)
