[package]
name = "ciq"
version = "0.2.1"
edition = "2024"
description = "CSV Interactive Query — type DuckDB SQL, watch an aligned grid update live (jiq for CSV)"
license = "MIT"
repository = "https://github.com/bellicose100xp/ciq"
default-run = "ciq"

[dependencies]
# Embedded query engine. PINNED EXACTLY (no range) per PLAN.md §8/R1+R8 — a minor
# bump can change SQL/sniffer/interrupt behavior; upgrades are deliberate and gated
# by the test suite. `bundled` builds DuckDB's C++ in-tree (self-contained binary).
# A1 reuse-after-interrupt was validated against this exact version (dev/ASSUMPTIONS.md A1).
duckdb = { version = "=1.10503.1", features = ["bundled"] }

# Custom error types (load failures, etc. — the QueryOutcome hot path is NOT errors).
thiserror = "2.0"

# CLI argument parsing.
clap = { version = "4.5", features = ["derive"] }

# TUI framework. Used for layout/rendering and — crucially for North Star 2 — its in-memory
# `TestBackend`, which lets the entire render path be snapshot-tested with no real terminal.
ratatui = "0.29"

# Multiline query-bar editor with a visible cursor cell (rendered into the TestBackend buffer, so
# editing stays headless-snapshotable). Ported from jiq's `input/input_state.rs` (same version);
# vim-style modal editing is layered on top in a later stage, not provided by the crate.
tui-textarea = "0.7"

# Debug logging (--debug). `log` is the zero-cost facade (no-op when no logger is installed);
# `env_logger` is the file sink. Output goes to /tmp/ciq/ only, never stdout/stderr.
log = "0.4"
env_logger = "0.11"

# TOML config parsing — the minimal `[csv]` ingest-override section (PLAN.md §6.6). The full
# config schema (Q5) is a Phase 5 deliverable; this is the `[csv]`-only loader that supplies
# the `config` input to `ingest::csv_opts::merge`.
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Base64 — used only by the OSC52 clipboard escape-string builder (PLAN.md §6.7), ported from
# jiq's `clipboard/osc52.rs`. The encoded payload is pure/headless-tested; only the final write
# of the escape bytes to the real terminal is the §4.7 human-validated residue.
base64 = "0.22"

[dev-dependencies]
# Snapshot testing (render buffers, generated SQL, schema goldens).
insta = "1.40"
# Property-based testing (never-panic / invariants).
proptest = "1.5"
# Temp-file CSV fixtures for engine integration tests.
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

# Profile used by cargo-dist for release builds (see dist-workspace.toml).
[profile.dist]
inherits = "release"
